<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:id="@+id/plan_detailPge_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <android.support.constraint.Guideline
        android:id="@+id/plan_detailPge_vertical_guideline_center"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <android.support.constraint.Guideline
        android:id="@+id/plan_detailPge_vertical_guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <include
        android:id="@+id/plan_detailPge_top"
        layout="@layout/top_bar"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider1"
        style="@style/planDetail_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plan_detailPge_top" />

    <TextView
        android:id="@+id/course_detailPge_name"
        style="@style/planDetail"
        android:text="@string/courseName"
        app:layout_constraintEnd_toStartOf="@id/plan_detailPge_vertical_guideline_center"
        app:layout_constraintStart_toEndOf="@id/plan_detailPge_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/divider1" />

    <EditText
        android:id="@+id/course_detailPge_name_txt"
        style="@style/planDetail_txt"
        android:hint="@string/courseName_txt"
        app:layout_constraintEnd_toEndOf="@id/plan_detailPge_vertical_guideline_end"
        app:layout_constraintStart_toStartOf="@id/plan_detailPge_vertical_guideline_center"
        app:layout_constraintTop_toBottomOf="@+id/plan_detailPge_top" />

    <View
        android:id="@+id/divider2"
        style="@style/planDetail_guideline"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_detailPge_name" />

    <TextView
        android:id="@+id/course_detailPge_site"
        style="@style/planDetail"
        android:text="@string/courseSite"
        app:layout_constraintEnd_toEndOf="@id/plan_detailPge_vertical_guideline_center"
        app:layout_constraintStart_toStartOf="@id/course_detailPge_name"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <EditText
        android:id="@+id/course_detailPge_site_txt"
        style="@style/planDetail_txt"
        android:hint="@string/courseSite_txt"
        app:layout_constraintEnd_toEndOf="@id/plan_detailPge_vertical_guideline_end"
        app:layout_constraintStart_toStartOf="@id/plan_detailPge_vertical_guideline_center"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <View
        android:id="@+id/divider3"
        style="@style/planDetail_guideline"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_detailPge_site" />

    <TextView
        android:id="@+id/course_detailPge_weekCount"
        style="@style/planDetail"
        android:text="@string/weekCount"
        app:layout_constraintEnd_toEndOf="@id/plan_detailPge_vertical_guideline_center"
        app:layout_constraintStart_toStartOf="@id/course_detailPge_name"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />
    
    <TextView
        android:id="@+id/course_detailPge_weekCount_txt_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="right"
        android:text="@string/weekCount_txt"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/plan_detailPge_vertical_guideline_end"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <View
        android:id="@+id/divider4"
        style="@style/planDetail_guideline"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_detailPge_weekCount" />

    <TextView
        android:id="@+id/course_detailPge_lessonCount"
        style="@style/planDetail"
        android:text="@string/lessonCount"
        app:layout_constraintEnd_toEndOf="@id/plan_detailPge_vertical_guideline_center"
        app:layout_constraintStart_toStartOf="@id/plan_detailPge_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/divider4" />

    <TextView
        android:id="@+id/course_detailPge_lessonCount_txt"
        style="@style/planDetail_txt"
        android:text="@string/lessonCount_txt"
        app:layout_constraintEnd_toEndOf="@id/plan_detailPge_vertical_guideline_end"
        app:layout_constraintStart_toStartOf="@id/plan_detailPge_vertical_guideline_center"
        app:layout_constraintTop_toBottomOf="@+id/divider4" />

    <View
        android:id="@+id/divider4_1"
        style="@style/planDetail_guideline"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_detailPge_lessonCount" />

    <TextView
        android:id="@+id/course_detailPge_teacher"
        style="@style/planDetail"
        android:text="@string/courseTeacher"
        app:layout_constraintEnd_toEndOf="@id/plan_detailPge_vertical_guideline_center"
        app:layout_constraintStart_toStartOf="@id/plan_detailPge_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/divider4_1" />

    <EditText
        android:id="@+id/course_detailPge_teacher_txt"
        style="@style/planDetail_txt"
        android:hint="@string/courseTeacher_txt"
        app:layout_constraintEnd_toEndOf="@id/plan_detailPge_vertical_guideline_end"
        app:layout_constraintStart_toStartOf="@id/plan_detailPge_vertical_guideline_center"
        app:layout_constraintTop_toBottomOf="@+id/divider4_1" />

    <View
        android:id="@+id/divider5"
        style="@style/planDetail_guideline"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_detailPge_teacher" />

    <TextView
        android:id="@+id/course_detailPge_beizhu"
        style="@style/planDetail"
        android:text="@string/beizhu"
        app:layout_constraintEnd_toEndOf="@id/plan_detailPge_vertical_guideline_center"
        app:layout_constraintStart_toStartOf="@id/plan_detailPge_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/divider5" />

    <TextView
        android:id="@+id/course_detailPge_beizhu_background"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rectangle"
        app:layout_constraintEnd_toStartOf="@id/plan_detailPge_vertical_guideline_end"
        app:layout_constraintStart_toEndOf="@id/plan_detailPge_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/course_detailPge_beizhu" />

    <EditText
        android:id="@+id/course_detailPge_beizhu_txt"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:background="@null"
        android:gravity="start"
        android:hint="@string/beizhu_txt"
        android:maxLines="10"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/plan_detailPge_vertical_guideline_end"
        app:layout_constraintStart_toEndOf="@id/plan_detailPge_vertical_guideline"
        app:layout_constraintTop_toTopOf="@+id/course_detailPge_beizhu_background" />

</android.support.constraint.ConstraintLayout>