<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/top_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/week_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="50dp"></android.support.v7.widget.RecyclerView>
    </ScrollView>

    <LinearLayout
        android:id="@+id/weekend"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="30dp"
            android:layout_height="45dp" />

        <LinearLayout style="@style/weekItem">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="周一" />

            <TextView
                android:id="@+id/week01_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="21" />
        </LinearLayout>

        <LinearLayout style="@style/weekItem">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="周二" />

            <TextView
                android:id="@+id/week02_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="21" />
        </LinearLayout>

        <LinearLayout style="@style/weekItem">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="周三" />

            <TextView
                android:id="@+id/week03_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="21" />
        </LinearLayout>

        <LinearLayout style="@style/weekItem">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="周四" />

            <TextView
                android:id="@+id/week04_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="21" />
        </LinearLayout>

        <LinearLayout style="@style/weekItem">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="周五" />

            <TextView
                android:id="@+id/week05_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="21" />
        </LinearLayout>

        <LinearLayout style="@style/weekItem">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="周六" />

            <TextView
                android:id="@+id/week06_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="21" />
        </LinearLayout>

        <LinearLayout style="@style/weekItem">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="周日" />

            <TextView
                android:id="@+id/week07_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="21" />
        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="30dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_height="wrap_content">

                <LinearLayout style="@style/timeNum">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/timeNum1"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="8sp"
                        android:text="@string/time1" />
                </LinearLayout>

                <LinearLayout style="@style/timeNum">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/timeNum2"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="8sp"
                        android:text="@string/time2" />
                </LinearLayout>

                <LinearLayout style="@style/timeNum">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="3"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="8sp"
                        android:text="@string/time3" />
                </LinearLayout>

                <LinearLayout style="@style/timeNum">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="4"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="8sp"
                        android:text="@string/time4" />
                </LinearLayout>

                <LinearLayout style="@style/timeNum">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="8sp"
                        android:text="@string/time5" />
                </LinearLayout>

                <LinearLayout style="@style/timeNum">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="6"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="8sp"
                        android:text="@string/time6" />
                </LinearLayout>

                <LinearLayout style="@style/timeNum">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="7"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="8sp"
                        android:text="@string/time7" />
                </LinearLayout>

                <LinearLayout style="@style/timeNum">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="8sp"
                        android:text="@string/time8" />
                </LinearLayout>

                <LinearLayout style="@style/timeNum">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="9"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="8sp"
                        android:text="@string/time9" />
                </LinearLayout>

                <LinearLayout style="@style/timeNum">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="10"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="8sp"
                        android:text="@string/time10" />
                </LinearLayout>

                <LinearLayout style="@style/timeNum">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="11"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="8sp"
                        android:text="@string/time11" />
                </LinearLayout>

                <LinearLayout style="@style/timeNum">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="12"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="8sp"
                        android:text="@string/time12" />
                </LinearLayout>

                <LinearLayout style="@style/timeNum">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="13"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="8sp"
                        android:text="@string/time13" />
                </LinearLayout>

                <LinearLayout style="@style/timeNum">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="14"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="8sp"
                        android:text="@string/time14" />
                </LinearLayout>

                <LinearLayout style="@style/timeNum">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="15"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="8sp"
                        android:text="@string/time15" />
                </LinearLayout>

                <LinearLayout style="@style/timeNum">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="16"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="8sp"
                        android:text="@string/time16" />
                </LinearLayout>

                <LinearLayout style="@style/timeNum">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="17"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="8sp"
                        android:text="@string/time17" />
                </LinearLayout>

                <LinearLayout style="@style/timeNum">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="18"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="8sp"
                        android:text="@string/time18" />
                </LinearLayout>

                <LinearLayout style="@style/timeNum">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="19"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="8sp"
                        android:text="@string/time19" />
                </LinearLayout>

                <LinearLayout style="@style/timeNum">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="20"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="8sp"
                        android:text="@string/time20" />
                </LinearLayout>




            </LinearLayout>

            <com.lbstudio.timer.app.app.ui.FlowLayout
                android:id="@+id/view_flow"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </com.lbstudio.timer.app.app.ui.FlowLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>